User profile edit basics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
             <a class="brand" href="index.html">SSO</a>
             <div class="nav-collapse">
               <ul class="nav">
-                <li><a href="#">Oversikt</a></li>
-                <li><a href="#">Endre profil</a></li>
+                <li><a href="/">Oversikt</a></li>
+                <li><a href="/edit.html">Endre profil</a></li>
                 <li><a href="#">Betalinger</a></li>
                 <li><a href="#">Abonnement</a></li>
                 <li><a href="#">Produkter</a></li>
@@ -61,7 +61,7 @@
 
         <footer>
           <hr>
-          <p>&copy; Front 2012. Hjelp Betinglelser Personvern Om SSO</p>
+          <p>&copy; Front 2012. Hjelp Betinglelser Personvern Om</p>
         </footer>
 
       </div> <!-- /container -->
