footer text cleanup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
 
         <footer>
           <hr>
-          <p>&copy; Front 2012. Hjelp Betinglelser Personvern Om</p>
+          <p class="muted">&copy; Front 2012. <a class="muted" href="#">Hjelp</a> <a class="muted" href="#">Betingelser</a> <a class="muted" href="#">Personvern</a> <a class="muted" href="#">Om</a> </p>
         </footer>
 
       </div> <!-- /container -->
