--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,18 @@
               <ul class="nav">
                 <li><a href="/">Oversikt</a></li>
                 <li><a href="/edit.html">Endre profil</a></li>
-                <li><a href="#">Betalinger</a></li>
-                <li><a href="#">Abonnement</a></li>
-                <li><a href="#">Produkter</a></li>
-                <li><a href="#">Promokode</a></li>
+                <li><a href="/subs.html">Abonnement</a></li>
+                <li><a href="#">Rabattkode</a></li>
+                <li class="divider"></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Per André</strong> <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#"><strong>perandre@front.no</strong></a></li>
+                    <li><a href="#">Kontoinnstillinger</a></li>
+                    <li><a href="#">Hjelp</a></li>
+                    <li><a href="#">Logg ut</a></li>
+                  </ul>
+                </li>
               </ul>
             </div><!--/.nav-collapse -->
           </div>
