--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,8 @@
             <div class="nav-collapse">
               <ul class="nav">
                 <li><a href="/">Oversikt</a></li>
-                <li><a href="/edit.html">Endre profil</a></li>
-                <li><a href="/subs.html">Abonnement</a></li>
+                <li><a href="edit.html">Endre profil</a></li>
+                <li><a href="subs.html">Abonnement</a></li>
                 <li><a href="#">Rabattkode</a></li>
                 <li class="divider"></li>
                 <li class="dropdown">
