--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title> {% if page.title %} {{ page.title }} | {% endif %} SSO</title>
+  <title> {% if page.title %} {{ page.title }} | {% endif %} Aboo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -40,13 +40,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="index.html">SSO</a>
+            <a class="brand" href="index.html">Aboo</a>
             <div class="nav-collapse">
               <ul class="nav">
                 <li><a href="/">Oversikt</a></li>
                 <li><a href="edit.html">Endre profil</a></li>
                 <li><a href="subs.html">Abonnement</a></li>
-                <li><a href="#">Rabattkode</a></li>
+                <li><a href="promocode.html">Rabattkode</a></li>
                 <li class="divider"></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Per André</strong> <b class="caret"></b></a>
@@ -54,7 +54,7 @@
                     <li><a href="#"><strong>perandre@front.no</strong></a></li>
                     <li><a href="#">Kontoinnstillinger</a></li>
                     <li><a href="#">Hjelp</a></li>
-                    <li><a href="#">Logg ut</a></li>
+                    <li><a href="login.html">Logg ut</a></li>
                   </ul>
                 </li>
               </ul>
