--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
             <a class="brand" href="index.html">Aboo</a>
             <div class="nav-collapse">
               <ul class="nav">
-                <li><a href="/">Oversikt</a></li>
+                <li><a href="index.html">Oversikt</a></li>
                 <li><a href="edit.html">Endre profil</a></li>
                 <li><a href="subs.html">Abonnement</a></li>
                 <li><a href="promocode.html">Rabattkode</a></li>
